--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-plotly.js": "^2.5.0",
     "@types/use-persisted-state": "^0.3.0",
+    "cheerio": "^1.0.0-rc.10",
+    "commander": "^8.3.0",
     "http-server": "^0.12.3",
     "source-map-loader": "^3.0.0",
     "ts-loader": "^9.1.2",
@@ -40,6 +42,7 @@
   "scripts": {
     "build": "node_modules/.bin/webpack",
     "dev": "node_modules/.bin/webpack --mode=development -w",
+    "permalink": "node permalink.js",
     "sync": "python sync.py",
     "fix-mime-type": "./fix-mime-type.sh"
   }
