--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,15 +17,6 @@ jobs:
           npm install
       - name: Build
         run: npm run build
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            index.html
-            assets/favicon.ico
-            assets/index.css
-            dist/bundle.js
       - name: Permalink
         run: npm run permalink -- -t ${{github.ref_name}} index.html index-permalinked.html
       - name: Sync
@@ -33,5 +24,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
         run: |
-          aws s3 cp index-permalinked.html s3://s3idx/index.html --acl public-read --cache-control max-age=0,public
-          aws s3 cp index-permalinked.html s3://s3idx/${{github.ref_name}}/index.html --acl public-read
+          npm run deploy -- -t ${{github.ref_name}}
