--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
     "@use-it/event-listener": "^0.1.7",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1043.0",
+    "bootstrap-loader": "^3.0.4",
     "buffer": "^6.0.3",
+    "html-inline-css-webpack-plugin": "^1.11.1",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-fetch": "^3.1.0",
     "plotly.js": "^2.3.0",
+    "popper.js": "^1.16.1",
     "process": "^0.11.10",
+    "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.1.1",
     "react-plotly.js": "^2.5.1",
@@ -17,6 +21,7 @@
     "react-tooltip": "^4.2.21",
     "sql.js-httpvfs": "^0.8.8",
     "stream": "^0.0.2",
+    "styled-components": "^5.3.3",
     "use-persisted-state": "^0.3.3",
     "use-query-params": "^1.2.3"
   },
@@ -26,13 +31,28 @@
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-plotly.js": "^2.5.0",
+    "@types/styled-components": "^5.1.19",
     "@types/use-persisted-state": "^0.3.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-sass": "^3.4.1",
     "cheerio": "^1.0.0-rc.10",
     "commander": "^8.3.0",
+    "css-loader": "^6.5.1",
+    "exports-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "http-server": "^0.12.3",
+    "imports-loader": "^3.1.1",
+    "inline-chunk-html-plugin": "^1.1.1",
+    "node-sass": "^7.0.0",
+    "postcss-loader": "^6.2.1",
+    "precss": "^4.0.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass-loader": "^12.4.0",
     "source-map-loader": "^3.0.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0"
   },
@@ -40,9 +60,9 @@
     "buffer": false
   },
   "scripts": {
-    "build": "node_modules/.bin/webpack",
+    "build": "NODE_ENV=production node_modules/.bin/webpack",
     "deploy": "./deploy.sh",
-    "dev": "node_modules/.bin/webpack --mode=development -w",
+    "dev": "NODE_ENV=development node_modules/.bin/webpack --mode=development -w",
     "permalink": "node permalink.js",
     "sync": "python sync.py",
     "fix-mime-type": "./fix-mime-type.sh"
