--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
+  "name": "s3idx",
   "dependencies": {
     "@use-it/event-listener": "^0.1.7",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1043.0",
-    "bootstrap-loader": "^3.0.4",
     "buffer": "^6.0.3",
     "html-inline-css-webpack-plugin": "^1.11.1",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "node-fetch": "^3.1.0",
-    "plotly.js": "^2.3.0",
     "popper.js": "^1.16.1",
     "process": "^0.11.10",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
-    "react-markdown": "^7.1.1",
-    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^6.0.2",
-    "react-tooltip": "^4.2.21",
-    "sql.js-httpvfs": "^0.8.8",
     "stream": "^0.0.2",
     "styled-components": "^5.3.3",
     "use-persisted-state": "^0.3.3",
@@ -30,21 +24,17 @@
     "@types/lodash": "^4.14.177",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
-    "@types/react-plotly.js": "^2.5.0",
     "@types/styled-components": "^5.1.19",
     "@types/use-persisted-state": "^0.3.0",
     "bootstrap": "^5.1.3",
     "bootstrap-sass": "^3.4.1",
-    "cheerio": "^1.0.0-rc.10",
-    "commander": "^8.3.0",
     "css-loader": "^6.5.1",
     "exports-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "html-webpack-tags-plugin": "^3.0.2",
-    "http-server": "^0.12.3",
     "imports-loader": "^3.1.1",
     "inline-chunk-html-plugin": "^1.1.1",
-    "node-sass": "^7.0.0",
+    "mini-css-extract-plugin": "^2.4.5",
     "postcss-loader": "^6.2.1",
     "precss": "^4.0.0",
     "resolve-url-loader": "^4.0.0",
