--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,3 +23,9 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
         run: |
           npm run deploy -- -t ${{github.ref_name}}
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            dist/index.html
