--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "s3idx",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.5",
     "@use-it/event-listener": "^0.1.7",
     "assert": "^2.0.0",
     "aws-sdk": "^2.1043.0",
@@ -14,6 +17,7 @@
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
+    "react-tooltip": "^4.2.21",
     "stream": "^0.0.2",
     "styled-components": "^5.3.3",
     "use-persisted-state": "^0.3.3",
