--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
   "name": "s3idx",
+  "sideEffects": [
+    "src/*.css"
+  ],
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.5",
     "@use-it/event-listener": "^0.1.7",
-    "assert": "^2.0.0",
     "aws-sdk": "^2.1043.0",
-    "buffer": "^6.0.3",
-    "html-inline-css-webpack-plugin": "^1.11.1",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "popper.js": "^1.16.1",
-    "process": "^0.11.10",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
-    "react-tooltip": "^4.2.21",
-    "stream": "^0.0.2",
     "styled-components": "^5.3.3",
     "use-persisted-state": "^0.3.3",
-    "use-query-params": "^1.2.3"
+    "use-query-params": "^1.2.3",
+    "util": "^0.12.4"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.6",
@@ -34,6 +32,7 @@
     "bootstrap-sass": "^3.4.1",
     "css-loader": "^6.5.1",
     "exports-loader": "^3.1.0",
+    "html-inline-css-webpack-plugin": "^1.11.1",
     "html-webpack-plugin": "^5.5.0",
     "html-webpack-tags-plugin": "^3.0.2",
     "imports-loader": "^3.1.1",
@@ -41,6 +40,7 @@
     "mini-css-extract-plugin": "^2.4.5",
     "postcss-loader": "^6.2.1",
     "precss": "^4.0.0",
+    "process": "^0.11.10",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.4.0",
     "source-map-loader": "^3.0.0",
